Material icons were replaced by Font Awesome 5 Angular component with SVG icons.
More about Font Awesome 5 Angular component: https://www.npmjs.com/package/@fortawesome/angular-fontawesome/

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
   <mat-card class="card">
     <mat-card-header class="card-header" fxLayout.gt-xs="row" fxLayout.xs="column">
       <mat-card-title class="card-title">
-        <div mat-card-avatar><mat-icon class="card-title-icon">person</mat-icon></div>
+        <div mat-card-avatar><fa-icon class="card-title-icon" [icon]="['fas', 'sign-in-alt']"></fa-icon></div>
         <span>Login</span>
       </mat-card-title>
     </mat-card-header>
