--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,7 +3,7 @@
   <mat-card class="card">
     <mat-card-header class="card-header">
       <mat-card-title class="card-title">
-        <div mat-card-avatar><mat-icon class="card-title-icon">person_add</mat-icon></div>
+        <div mat-card-avatar><fa-icon class="card-title-icon" [icon]="['fas', 'user-plus']"></fa-icon></div>
         <span>Create your account</span>
       </mat-card-title>
     </mat-card-header>
