--- a/src/app/ui/navigation-bar/navigation-bar.component.html
+++ b/src/app/ui/navigation-bar/navigation-bar.component.html
@@ -13,16 +13,16 @@
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
       <ul fxLayout fxLayoutGap="15px" class="navigation-items">
         <li>
-          <a routerLink="/login">Login</a>
+          <a *ngIf="!currentUser" routerLink="/login">Login</a>
         </li>
         <li>
-          <a routerLink="/registration">Registration</a>
+          <a *ngIf="!currentUser" routerLink="/registration">Registration</a>
         </li>
         <li>
           <div *ngIf="currentUser">Welcome <i id="user-name">{{currentUser.username}}</i></div>
         </li>
         <li>
-          <a routerLink="/" (click)="logout()">Logout</a>
+          <a *ngIf="currentUser" routerLink="/" (click)="logout()">Logout</a>
         </li>
       </ul>
     </div>
