Book service moved to service folder. Removed redundant methods for books.

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,8 +1,4 @@
 <p>
-  books works!
+  books work!
 </p>
-<div>
-  <button (click)="testMe()">Test me!</button>
 
-  <p>Value: {{testResult}}</p>
-</div>
