--- a/src/app/ui/navigation-bar/navigation-bar.component.css
+++ b/src/app/ui/navigation-bar/navigation-bar.component.css
@@ -32,6 +32,14 @@ mat-toolbar ul li a:hover {
   color: aqua;
   padding-right: 10px;
 }
+#lang {
+  outline: none;
+  display: block;
+  border-radius: 5px;
+  padding: 0 5px;
+  font-weight: 700;
+  background-color: rgb(228, 240, 121);
+}
 @media(max-width: 959px){
   mat-toolbar{
     border-radius: 0px;
