--- a/src/app/ui/navigation-bar/navigation-bar.component.html
+++ b/src/app/ui/navigation-bar/navigation-bar.component.html
@@ -25,6 +25,11 @@
           <a *ngIf="currentUser" routerLink="/" (click)="logout()">Logout</a>
         </li>
       </ul>
+      <select name="lang" id="lang">
+        <option value="en">EN</option>
+        <option value="cz">CZ</option>
+        <option value="ru">RU</option>
+      </select>
     </div>
   </mat-toolbar>
 </div>
