--- a/src/app/ui/navigation-bar/navigation-bar.component.css
+++ b/src/app/ui/navigation-bar/navigation-bar.component.css
@@ -9,24 +9,29 @@ mat-toolbar{
   top: 0;
   z-index: 100;
 }
-mat-toolbar ul li a {
+mat-toolbar a {
   text-decoration: none;
   color: white;
+  margin-right: 30px;
 }
-mat-toolbar ul li a:hover {
+mat-toolbar a:hover {
   color: rgb(180, 180, 180);
+}
+mat-toolbar ul li div {
+  margin-right: 30px;
 }
 .navigation-items{
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-#site-name {
-  text-decoration: none;
-  color: white;
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 5px;
+.inspire-li {
+  font-size: 27px;
+  margin-right: 100px;
+}
+.active-link {
+  color: rgb(243, 197, 113) !important;
+  border-bottom: 2px #fff solid;
 }
 #user-name {
   color: aqua;
