--- a/src/app/ui/navigation-bar/navigation-bar.component.html
+++ b/src/app/ui/navigation-bar/navigation-bar.component.html
@@ -1,28 +1,29 @@
 <div class="header">
   <mat-toolbar>
     <div fxFlex fxLayout>
-      <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-        <li><a routerLink="/posts">Inspire me!</a></li>
-        <li><a routerLink="/books">Books</a></li>
+      <div class="navigation-item inspire-li">
+        <a routerLink="/sights" (click)="activeLink = 'sights'" [ngClass]="{'active-link' : activeLink == 'sights'}">Inspire me!</a>
+      </div>
+      <ul fxLayout class="navigation-items">        
+        <li><a routerLink="/posts" (click)="activeLink = 'posts'" [ngClass]="{'active-link' : activeLink == 'posts'}">Where to go</a></li>
+        <li><a routerLink="/books" (click)="activeLink = 'books'" [ngClass]="{'active-link' : activeLink == 'books'}">What to read</a></li>
+        <li><a routerLink="/multimedia" (click)="activeLink = 'multimedia'" [ngClass]="{'active-link' : activeLink == 'multimedia'}">What to watch/listen</a></li>
         <li></li>
       </ul>  
     </div>
-    <div fxFlex fxLayoutAlign="center">
-      <a id="site-name" routerLink="/"><em>Travel Diary</em></a>
-    </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-      <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+      <ul fxLayout class="navigation-items">
         <li>
-          <a *ngIf="!currentUser" routerLink="/login">Login</a>
+          <a *ngIf="!currentUser" routerLink="/login" (click)="activeLink = 'login'" [ngClass]="{'active-link' : activeLink == 'login'}">Login</a>
         </li>
         <li>
-          <a *ngIf="!currentUser" routerLink="/registration">Registration</a>
+          <a *ngIf="!currentUser" routerLink="/registration" (click)="activeLink = 'registration'" [ngClass]="{'active-link' : activeLink == 'registration'}">Registration</a>
         </li>
         <li>
           <div *ngIf="currentUser">Welcome <i id="user-name">{{currentUser.username}}</i></div>
         </li>
         <li>
-          <a *ngIf="currentUser" routerLink="/" (click)="logout()">Logout</a>
+          <a *ngIf="currentUser" routerLink="/" (click)="logout();activeLink = ''">Logout</a>
         </li>
       </ul>
       <select name="lang" id="lang">
