--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,10 +1,34 @@
 <div class="post-main-div" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center">
 <div class="global-container">
     <div fxLayout="row wrap">
-        <div class="search" fxFlex>
-
+        <div class="search" fxFlex fxLayoutAlign="start center" fxLayoutGap="25px">
+            <input list="authors" class="search-data" name="author" spellcheck="false" placeholder="Author">
+            <datalist id="authors">
+                <option value="Jožin z Bažin">
+                <option value="Amber Valentine">
+                <option value="Bilbo Baggins">
+                <option value="Xu Xin">
+                <option value="Crazy Midnight Dancer">
+                <option value="Disco Superstar">
+                <option value="Ponchik de Buffet">
+                <option value="Rumpelstilzchen">
+            </datalist>
+            <input list="sights" class="search-data" name="sight" spellcheck="false" placeholder="Sights">
+            <datalist id="sights">
+                <option value="Paris">
+                <option value="London">
+                <option value="New-York">
+                <option value="Podjezd #3">
+                <option value="Jídelna 'U trí švábů'">
+                <option value="Bažina">
+            </datalist>
+            <input list="sorting" class="search-data" name="sorting" spellcheck="false" placeholder="Sorting">
+            <datalist id="sorting">
+                <option value="Sort1">
+                <option value="Sort2">
+            </datalist>
             <mat-form-field class="search-form">
-                <input matInput autocomplete="off" placeholder="Search" type="text">
+                <input matInput autocomplete="off" spellcheck="false" placeholder="Search" type="text">
             </mat-form-field>
             <button class="search-button" button="submit" mat-raised-button>
                 <fa-icon [icon]="['fas', 'search']" size="lg"></fa-icon>
