--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -53,8 +53,10 @@
                         <mat-card-title class="mat-card-title">{{post.title}}</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="card-text-content" [innerHTML]="post.description">
-                        </div>
+                        <img
+                             *ngIf="post.previewImageUrl?.length"
+                             [src]="post.previewImageUrl">
+                        <div [innerHTML]="post.description"></div>
                     </mat-card-content>
     
                     <mat-card-actions fxLayout="row" fxLayoutAlign="end">
