Img folder was moved to assets folder

--- a/src/app/ui/navigation-bar/navigation-bar.component.css
+++ b/src/app/ui/navigation-bar/navigation-bar.component.css
@@ -1,5 +1,5 @@
 .header {
-  background: url("../../../img/headercut.png") center no-repeat;
+  background: url("../../../assets/img/headercut.png") center no-repeat;
   background-size: cover;
   height: 220px;
 }
