--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -56,7 +56,7 @@
     padding: 5px 8px;
 }
 .card-item {
-    background: url("../../img/wood.jpg") center no-repeat;
+    background: url("../../assets/img/wood.jpg") center no-repeat;
     background-size: cover;
     border: 1px solid #aa853c;
     box-shadow: 0 0 15px 0 rgba(0,0,0,0.4);
