Passing post details url between Routes
A link to a particular post is passed through a state object during navigation from posts preview to a singular post details.

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -84,10 +84,9 @@
                             <fa-icon [icon]="['fas', 'map-marked']" size="lg"></fa-icon>
                         </button>
                         <span fxFlex></span>
-                        <a mat-raised-button routerLink="/post/details">
+                        <a mat-raised-button routerLink="/post/details" [state]="{ postUrl: post.links[0].href }">
                             Read more
                         </a>
-
                     </mat-card-actions>
 
                 </mat-card>
