Changed flex attributes

--- a/src/app/ui/bottom-bar/bottom-bar.component.html
+++ b/src/app/ui/bottom-bar/bottom-bar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar>
-  <div fxFlex fxLayout="row wrap"  fxLayoutAlign="center" fxHide.xs>
-    <div fxLayoutAlign="center" fxLayoutGap="10px"><span>All you need is love</span>
+  <div fxFlex fxLayoutAlign="center">
+    <div fxLayoutAlign="center" fxLayoutGap="10px" fxLayout="row wrap">
+      <span>All you need is </span>
       <fa-icon class="bottom-icon" [icon]="['fas', 'heart']"></fa-icon><span>and</span>
       <fa-icon class="bottom-icon" [icon]="['fas', 'mug-hot']"></fa-icon>
     </div>
