--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -90,7 +90,7 @@
                                 <fa-icon [icon]="['fas', 'map-marked']" size="lg"></fa-icon>
                             </button>
                         </div>
-                        <a mat-raised-button routerLink="/post/details" [state]="{ postUrl: post.links[0].href }">
+                        <a mat-raised-button routerLink="/post/{{post.postId}}">
                             Read more
                         </a>
                     </mat-card-actions>
