Added save-post page for updating and creating posts
Added save-post component, TinyMCE WYSIWYG HTML editor and Cloudinary cloud-based image and video management service (SaaS).  A function that is used to replace TinyMCE’s default image upload handler with custom logic was specified.

--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -14,7 +14,7 @@
             <fa-icon [icon]="['fas', 'cogs']" size="lg"></fa-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item>
+            <button mat-menu-item routerLink="/save-post">
                 <fa-icon [icon]="['fas', 'edit']" size="lg"></fa-icon>
                 Edit
             </button>
