--- a/src/app/save-post/save-post.component.css
+++ b/src/app/save-post/save-post.component.css
@@ -16,3 +16,10 @@
 .vertical-icon-panel {
     padding-top: 15px;
 }
+.mat-form-field {
+    width: 100%;
+}
+.text .mat-error {
+    font-size: 85%;
+    padding-top: 5px;
+}
