--- a/src/app/save-post/save-post.component.html
+++ b/src/app/save-post/save-post.component.html
@@ -8,15 +8,40 @@
         </div>
     </div>
     <div class="content" fxFlex="75%">
+        <form [formGroup]="savePostForm" (submit)="save()">
+            <h4>Post preview</h4>
+            <input type="file">
 
-        <h4>Post preview</h4>
-        <input type="file">
-        <h4>Post description</h4>
-        <textarea></textarea>
-        <h4>Impressions</h4>
-        <editor apiKey="lk4x1sy9vlt5l5pld7wtxgem69i1gf0iokw9sb3gxj43aue1" [init]="getInitData()"
-            plugins="image"></editor>
-
+            <h4>Post description</h4>
+            <mat-form-field>
+                <textarea matInput #input minlength="10" formControlName="description"></textarea>
+                <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
+                <mat-error *ngIf="savePostForm.controls.description.hasError('required')">
+                    Please enter description
+                </mat-error>
+                <mat-error *ngIf="savePostForm.controls.description.hasError('minlength')">
+                    Description must be at least 10 characters long.
+                </mat-error>
+            </mat-form-field>
+            <h4>Impressions</h4>
+            <!-- <mat-form-field> doen't work properly with TinyMCE
+                 https://github.com/tinymce/tinymce-angular/issues/21
+            -->
+            <div class="text">
+                <editor #input2 minlength="40" formControlName="text"
+                        apiKey="lk4x1sy9vlt5l5pld7wtxgem69i1gf0iokw9sb3gxj43aue1"
+                        [init]="getInitData()"
+                        plugins="image"></editor>
+                <mat-error *ngIf="savePostForm.controls.text.hasError('required') &&
+                  savePostForm.controls.text.touched">
+                    Please enter text
+                </mat-error>
+                <mat-error *ngIf="savePostForm.controls.text.hasError('minlength') &&
+                  savePostForm.controls.text.touched">
+                    Text must be at least 40 characters long.
+                </mat-error>
+            </div>
+        </form>
     </div>
 </div>
 
