Removed min length validation requirement for text area

--- a/src/app/save-post/save-post.component.html
+++ b/src/app/save-post/save-post.component.html
@@ -28,7 +28,7 @@
                  https://github.com/tinymce/tinymce-angular/issues/21
             -->
             <div class="text">
-                <editor minlength="40" formControlName="text"
+                <editor formControlName="text"
                         apiKey="lk4x1sy9vlt5l5pld7wtxgem69i1gf0iokw9sb3gxj43aue1"
                         [init]="getInitData()"
                         plugins="print preview fullpage searchreplace autolink
