--- a/src/app/sights/sights.component.html
+++ b/src/app/sights/sights.component.html
@@ -1,4 +1,5 @@
 <div style="height: 800px;"
      leaflet
-     [leafletOptions]="options">
+     [leafletOptions]="options"
+     [leafletLayers]="markers">
 </div>
