Updated model class for response page
Changed model class that helps to manage paginated data with hyperlinks.

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -49,8 +49,8 @@
                 </i>
             </div>
         </div>
-        <div fxLayout="row wrap" fxLayoutAlign="center" class="card-deck-container" *ngIf="page.content?.length">
-            <div *ngFor="let post of page.content" class="card-container" [ngClass]="currentView">
+        <div fxLayout="row wrap" fxLayoutAlign="center" class="card-deck-container" *ngIf="page.resources.content?.length">
+            <div *ngFor="let post of page.resources.content" class="card-container" [ngClass]="currentView">
                 <mat-card class="card-item">
                     <mat-card-header>
                         <mat-card-title class="mat-card-title">{{post.title}}</mat-card-title>
