--- a/src/app/sights/sights.component.html
+++ b/src/app/sights/sights.component.html
@@ -1,5 +1,14 @@
-<div style="height: 800px;"
-     leaflet
-     [leafletOptions]="options"
-     [leafletLayers]="markers">
+<div class="container" fxLayout="row wrap" fxLayoutAlign="center">
+    <div *ngIf="isDevMode" fxFlex="18%">
+        <p>Zoom: {{zoom}}</p>
+        <p>{{center}}</p>
+    </div>
+    <div class="content" fxFlex="1 1 75%"
+         leaflet
+         [leafletOptions]="options"
+         [leafletLayers]="markers"
+         [(leafletZoom)]="zoom"
+         [(leafletCenter)]="center">
+
+    </div>
 </div>
