--- a/src/app/sights/sights.component.html
+++ b/src/app/sights/sights.component.html
@@ -1,14 +1,7 @@
-<div class="container" fxLayout="row wrap" fxLayoutAlign="center">
-    <div *ngIf="isDevMode" fxFlex="18%">
-        <p>Zoom: {{zoom}}</p>
-        <p>{{center}}</p>
-    </div>
-    <div class="content" fxFlex="1 1 75%"
-         leaflet
-         [leafletOptions]="options"
-         [leafletLayers]="markers"
-         [(leafletZoom)]="zoom"
-         [(leafletCenter)]="center">
-
-    </div>
+<div class="container">
+<ul>
+    <li><a routerLink = "map" routerLinkActive="active-link">Map</a></li>
+    <li><a routerLink = "list" routerLinkActive="active-link">List2</a></li>
+</ul>
+    <router-outlet></router-outlet>
 </div>
