--- a/src/app/sights/list/list.component.html
+++ b/src/app/sights/list/list.component.html
@@ -1,3 +1,34 @@
-<p>
-  list works!
-</p>
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="label">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Label </th>
+      <td mat-cell *matCellDef="let row"> {{row.label}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="mapCoordLat">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Latitude </th>
+      <td mat-cell *matCellDef="let row"> {{row.mapCoordLat}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="mapCoordLong">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Longitude </th>
+      <td mat-cell *matCellDef="let row"> {{row.mapCoordLong}} </td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
