Updated mechanism of loading pages for sights table
Loading data for each page from server.

--- a/src/app/sights/list/list.component.html
+++ b/src/app/sights/list/list.component.html
@@ -30,5 +30,10 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"
+                 [length]="page.totalElements"
+                 [pageSize]="page.pageSize"
+                 (page)="updatePage($event)">
+
+  </mat-paginator>
 </div>
